fix: page overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ html,
 body {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
 }
 
 body {
